array.island.Island.scala.error
Compilation error:
Island:8: error: value unary_! is not a member of Int
    } else if (num(i) == 0 && !nump != 0){
                              ^